--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
     "next": "16.0.10",
     "react": "^19.2.0",
@@ -31,7 +32,8 @@
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
