--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
+    "bwip-js": "^4.8.0",
     "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
